Radio&CheckBox Visiblity on overlay Fixed

--- a/AppointmentBooking/AppointmentBooking/Content/Site.css
+++ b/AppointmentBooking/AppointmentBooking/Content/Site.css
@@ -150,6 +150,7 @@ td .tdRoom {
   border: 1px solid #000;
   opacity: 0.5;
   pointer-events: none;
+  z-index:1000;
 }
 .loderimage
 {
